--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,43 @@
+# Compiled source #
+###################
+*.com
 *.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Build tool #
+##############
+target
+.idea
 *.iml
+*.im
+*.ipr
+*.iws
+.settings
+.project
+.classpath
+
+# OS generated files #
+######################
 *~
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+activemq-data
+*.epoch
+*.log
+.yardoc
+
 ~lock.*
 ~$*
-*.DS_Store
 *.svn/
 *.nogit/
 LMSClass/
@@ -21,13 +55,7 @@ LMSClass/
 config/templates/_gen.yaml
 config/templates/_temp.yaml
 
-.classpath
-.project
-.settings/
 styles/
 
 **/src/data/error
 **/src/data/outbox
-**/activemq-data
-
-
