--- a/usecase-3/routing/src/main/resources/fabric8/route.properties
+++ b/usecase-3/routing/src/main/resources/fabric8/route.properties
@@ -1,5 +1,6 @@
-fileInput=???
+fileInput=src/data/inbox
 
-queueInput=???
-queueOutput=???
+queueInput=input-queue
+queueOutput=output-queue
+
 topicNotification=???
