--- a/usecase-3/routing/src/test/resources/fabric8/route.properties
+++ b/usecase-3/routing/src/test/resources/fabric8/route.properties
@@ -3,4 +3,7 @@ fileInput=src/data/inbox
 queueInput=usecase-input
 queueOutput=usecase-output
 
-topicNotification=???
+topicNotification=usecase-notification
+
+redelivery.delay=1000
+redelivery.max=0
