--- a/usecase-4/routing/src/main/resources/fabric8/route.properties
+++ b/usecase-4/routing/src/main/resources/fabric8/route.properties
@@ -1,5 +1,6 @@
-fileInput=???
+fileInput=src/data/inbox
 
-queueInput=???
-queueOutput=???
-topicNotification=???
+queueInput=usecase-input
+queueOutput=usecase-output
+
+topicNotification=usecase-error
